# compass

./: .gitmodules  CMakeLists.txt  driver.py
script/artifact/: task.py
script/artifact/graph/: ablation_study.py  ablation_study_full.py  latency_breakdown.py  latency_mrr.py
src/faiss/: CMakeLists.txt
src/oram/: OramRing.cpp
tests/baseline/cluster/: README.md  cluster_config_parser.cpp  cluster_config_parser.h  cluster_search.cpp
tests/baseline/cluster/clustering/: config.json  kmeans_cluster.cpp
